--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,18 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- MySQL驱动 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+        </dependency>
+
+        <!-- 数据源 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.15</version>
+        </dependency>
     </dependencies>
 </project>
