--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>spring-ioc</module>
+        <module>spring-ioc-annotation</module>
+        <module>spring-reflect</module>
     </modules>
 
     <properties>
@@ -61,6 +63,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>1.2.15</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
         </dependency>
     </dependencies>
 </project>
