--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring-reflect</module>
         <module>spring-my-ioc</module>
         <module>spring-aop</module>
+        <module>spring-junit</module>
     </modules>
 
     <properties>
@@ -28,7 +29,12 @@
             <artifactId>spring-context</artifactId>
             <version>6.0.3</version>
         </dependency>
-
+        <!--spring对junit的支持相关依赖-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.0.2</version>
+        </dependency>
         <!--junit5测试-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
