--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-my-ioc</module>
         <module>spring-aop</module>
         <module>spring-junit</module>
+        <module>spring-jdbc-tranx</module>
     </modules>
 
     <properties>
