--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,10 @@
             <artifactId>spring-aspects</artifactId>
             <version>6.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+        </dependency>
     </dependencies>
 </project>
