--- a/spring-jdbc-tranx/pom.xml
+++ b/spring-jdbc-tranx/pom.xml
@@ -22,5 +22,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>6.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
